transactionListUseRouter: added default values to smartPayModal, changed headline,
transactionElement fixed display of originalDept,

--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -139,8 +139,8 @@
         .transactionCardStyle {
               padding: 0;
               margin:  10px;
-
-             height: 270px;
+               //270 old
+             height: 290px;
              width: 200px;
               margin-left: auto;
               margin-right: auto;
@@ -246,7 +246,7 @@
                 }
 
 
-                        // icon gren tick
+                        // icon green tick
                 .abbezahltHarken {
                     color: green;
                     background-color: transparent;
